2008-04-11  Michael Hutchinson <mhutchinson@novell.com>

	* Makefile.am: Depend on MonoDevelop.SourceEditor2.dll; its build number 
	  auto-increments, so whenever it changes, we need to rebuild this.

2008-04-08  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.XmlEditor.Completion/XmlTagCompletionData.cs,
	  MonoDevelop.XmlEditor.Completion/ClosingBracketCompletionDataProvider.cs:
	  Split the completion data class into a separated file and
	  generalised it a little.
	* MonoDevelop.XmlEditor.Completion/ILazilyLoadedProvider.cs,
	  MonoDevelop.XmlEditor.Completion/XmlSchemaCompletionData.cs: Rework
	  lazy loading, with forced advance-loading via an interface.
	* MonoDevelop.XmlEditor.Completion/EmptyXmlCompletionProvider.cs:
	  Implemented an empty completion provider.
	* Makefile.am, MonoDevelop.XmlEditor.mdp: Updated.

2008-04-03  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* MonoDevelop.XmlEditor.Gui/XmlSchemasPanelWidget.cs: Workaround bug in mono
	  1.2.4 where usings are ignored inside anonymous methods.

2008-04-02  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.XmlEditor.Completion/ClosingBracketCompletionDataProvider.cs,
	  MonoDevelop.XmlEditor/ClosingBracketCompletionDataProvider.cs:
	  Moved and made the data object public.
	* Makefile.am, MonoDevelop.XmlEditor.mdp: Updated.

2008-04-02  Michael Hutchinson  <mhutchinson@novell.com> 

	* MonoDevelop.XmlEditor.addin.xml: Bump version to 0.19 to match 
	  other addins. Fixes dependency resolution on Mono HEAD (but wasn't 
	  a problem on 1.9, not sure why).

2008-04-01  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.XmlEditor.Gui/XmlSchemasPanelWidget.cs, Makefile.am,
	  MonoDevelop.XmlEditor.mdp: Updated.
	* MonoDevelop.XmlEditor/XmlSchemaManager.cs,
	  MonoDevelop.XmlEditor/XmlTextEditorExtension.cs: Track namespace
	  changes.
	* MonoDevelop.XmlEditor/XmlSchemaCompletionDataCollection.cs,
	  MonoDevelop.XmlEditor/XmlCompletionData.cs,